<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:padding="16dp"
    tools:context=".MainActivity">

    <!-- лого ВШЭ -->
    <ImageView
        android:id="@+id/logo"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:src="@drawable/logo_hse"
        android:contentDescription="@string/appName"
        android:adjustViewBounds="true"
        android:scaleType="fitCenter"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/studentButton"
        app:layout_constraintWidth_percent="0.8"
        app:layout_constraintHeight_percent="0.5"
        android:layout_marginBottom="32dp"/>

    <!-- расписание для студентов -->
    <Button
        android:id="@+id/studentButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/studentSchedule"
        android:backgroundTint="@color/colorPrimary"
        android:textColor="@android:color/white"
        android:padding="16dp"
        app:layout_constraintBottom_toTopOf="@+id/teacherButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="8dp"
        android:layout_marginHorizontal="8dp"/>

    <!-- расписание для преподавателя -->
    <Button
        android:id="@+id/teacherButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/teacherSchedule"
        android:backgroundTint="@color/colorPrimary"
        android:textColor="@android:color/white"
        android:padding="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="16dp"
        android:layout_marginHorizontal="8dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>